internal/tensorzero-derive/tests/ui/invalid_tag.stderr
error: TensorZeroDeserialize: #[serde(tag = "...")] attribute must be a string literal
 --> tests/ui/invalid_tag.rs:2:15
  |
2 | #[serde(tag = 123)]
  |               ^^^
